add handlers for job
