# generator/handlers/health.go
@@ -6,18 +6,9 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-// HealthCheck godoc
-// @Summary Show the status of server.
-// @Description get the status of server.
-// @Tags health check
-// @Accept */*
-// @Produce json
-// @Success 200 {object} map[string]interface{}
-// @Router /health [get]
 func HealthCheck(c *gin.Context) {
 	res := map[string]interface{}{
 		"data": "chameleon generator server is up and running",
 	}
-
 	c.JSON(http.StatusOK, res)
 }
